// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentList should match snapshot with appointments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div>
        <div
          class="cancelled-tile el-mb6 el-card-wrap"
        >
          <div
            class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
          >
            <h5
              class="el-card-list-heading"
            >
              05:30 PM - 06:00 PM - Cancelled 
            </h5>
            <h6
              class="el-card-list-sub-heading"
            >
              Viewing
            </h6>
          </div>
          <div
            class="el-card-list-item-expanded el-card-list-item"
          >
            <div
              class="el-card-list-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-list-item-text-wrap"
            >
              <div
                class="el-card-list-item-text-primary"
              >
                Property
              </div>
              <div
                class="el-card-list-item-text-secondary"
              >
                56 High Street
              </div>
            </div>
          </div>
          <div
            class="el-card-list-item-expanded el-card-list-item"
          >
            <div
              class="el-card-list-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-list-item-text-wrap"
            >
              <div
                class="el-card-list-item-text-primary"
              >
                Attendee
              </div>
              <div
                class="el-card-list-item-text-secondary"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div>
      <div
        class="cancelled-tile el-mb6 el-card-wrap"
      >
        <div
          class="el-card-list-main-wrap-expanded el-card-list-main-wrap"
        >
          <h5
            class="el-card-list-heading"
          >
            05:30 PM - 06:00 PM - Cancelled 
          </h5>
          <h6
            class="el-card-list-sub-heading"
          >
            Viewing
          </h6>
        </div>
        <div
          class="el-card-list-item-expanded el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Property
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              56 High Street
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item-expanded el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Attendee
            </div>
            <div
              class="el-card-list-item-text-secondary"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppointmentList should match snapshot with no appointments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
       
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No appointments
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
     
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No appointments
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
